[package]
name = "aleph-alpha-tokenizer"
version = "0.1.0"
authors = ["Andre Bogus <andre.bogus@aleph-alpha.de>"]
edition = "2018"
include = ["README.md", "LICENSE-MIT", "LICENSE-APACHE", "src/lib.rs"]

[features]
# Enable this to allow using the tokenizer as a `tokenizer::Model`
huggingface = ["tokenizers"]
default = []

[dependencies]
tokenizers = { version = "0.9.0", optional = true }
fst = "0.4.1"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "bench"
harness = false
